tests/NormalTests/paczka1/fuzzy1/25706166.err
Error in line 12: rRv A793 44,49
Error in line 16: mi1iqDrAI S818 52,9
Error in line 4: R7aBV A637 73,9
Error in line 24: mi1iqDrAI S818 81,0
Error in line 34: rRv A793 21,6
